Support renegotiation with sockets (#321)
Fixes #228
Fixes #310